z-index fix

--- a/assets/chat/css/style.scss
+++ b/assets/chat/css/style.scss
@@ -1485,6 +1485,7 @@ hr {
   width: fit-content;
   min-width: 75px;
   max-width: 250px;
+  z-index: 221;
   .emote-image {
     display: flex;
     justify-content: center;
